// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BoutResult snapshot > BoutResult shape snapshot 1`] = `
{
  "boutId": "test-001",
  "duration": 20,
  "excitementScore": 6,
  "isKinboshi": false,
  "kenshoEnvelopes": 0,
  "kimarite": "oshidashi",
  "kimariteName": "oshidashi",
  "log": [],
  "loserRikishiId": "r1",
  "stance": "push-dominant",
  "tachiaiWinner": "west",
  "upset": false,
  "winner": "west",
  "winnerRikishiId": "r2",
}
`;

exports[`BoutResult snapshot BoutResult shape snapshot 1`] = `
{
  "boutId": "test-001",
  "duration": 240,
  "excitementScore": 70,
  "isKinboshi": false,
  "kenshoEnvelopes": 0,
  "kimarite": "oshidashi",
  "kimariteName": "oshidashi",
  "log": [],
  "loserRikishiId": "r2",
  "stance": "push-dominant",
  "tachiaiWinner": "east",
  "upset": false,
  "winner": "east",
  "winnerRikishiId": "r1",
}
`;
